<resources>
    <string name="app_name">Decorum</string>
    <string name="username_hint">Username</string>
    <string name="password">Password</string>
    <string name="new_Account">NEW ACCOUNT</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="next">Next</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="discover_living_room">Design</string>
    <string name="kitchen_title">Your Ideal Kitchen</string>
    <string name="office">Home Office</string>
    <string name="relax_room">Bedroom</string>
    <string name="discover_text">Your Sitting Room Perfectly</string>
    <string name="kitchen_text">Get every kitchen need set up </string>
    <string name="office_text">Customized and Nicely set up</string>
    <string name="rewards_text">Start Now</string>
    <string name="get_started">Get Started</string>
    <string name="bedroom">Bedroom</string>
    <string name="login">Login</string>
    <string name="no_account">Dont have an account? <b>Sign Up</b></string>
    <string name="have_account">Already have an account? <b>Log in</b></string>
    <string name="welcome">Login to Decorum</string>
    <string name="start_home_deco">Start Decorating Your</string>
    <string name="start_home_deco_cont"><b>Home With Us</b></string>
    <string name="submit">Submit</string>
    <string name="reset_pass_title">Have you forgotten your password?</string>
    <string name="reset_instruction">Just enter the email you\'ve used to register and we will send you a reset link</string>
    <string name="title_home">Home</string>
    <string name="my_deco">Favourites</string>
    <string name="create_design">Create Design</string>
    <string name="no_favourites">You have not Picked Favourite Designs. \n Add  design  to your favourites Favourites</string>

    <string name="action_settings">Settings</string>
    <string name="landing_first_option">Let\'s get started</string>
    <string name="title_activity_browse_furniture">BrowseFurnitureActivity</string>
    <string name="table_1">Table 1</string>
    <string name="title_activity_render_furniture">RenderFurnitureActivity</string>
    <string name="title_activity_sample_cam">SampleCamActivity</string>
    <string name="main_title_urlLauncher">Launch World via url</string>
    <string name="compass_accuracy_low">Please re-calibrate compass by waving your device in a figure 8 motion.</string>
    <string name="location_fetching">Trying to find out where you are</string>
    <string name="device_unsupported">This device is not supported</string>
    <string name="videosrawables_fallback">VideoDrawables are rendered fullscreen on this device</string>
    <string name="urllauncher_menu_clear_history">Clear history</string>
    <string name="urllauncher_button_launch"> Launch </string>
    <string name="poi_detail_title">Place Details</string>
    <string name="urllauncher_hint_textfield">http://</string>
    <string name="urllauncher_default_value_textfield">http://</string>
    <string name="poi_name">Name</string>
    <string name="poi_description">Description</string>
    <string name="poi_id">ID</string>
    <string name="title_activity_sample1_poi_detail">Sample 5.1 POI Detail</string>
    <string name="footer">Sample App</string>
</resources>
