<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:padding="10dp"
            android:layout_marginLeft="20dp"
            android:textAllCaps="false"
            android:layout_marginRight="20dp"
            android:textColor="@color/white"
            android:layout_marginBottom="10dp"
            app:srcCompat="@drawable/forgot" />

        <com.ctrlplusz.anytextview.AnyTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="20dp"
            android:text="@string/reset_pass_title"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:layout_gravity="center_vertical"
            android:gravity="center_horizontal"
            android:layout_marginBottom="5dp"
            app:typeface="FontsFree-Net-SFProText-Bold.ttf" />

        <com.ctrlplusz.anytextview.AnyTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reset_instruction"
            android:textSize="16sp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/transluscent_white"
            android:layout_marginBottom="20dp"
            app:typeface="FontsFree-Net-SFProText-Bold.ttf" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:background="@drawable/round">

            <EditText
                android:id="@+id/edEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Email"
                android:background="@drawable/rounded_border_no_fill"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:padding="10dp"
                android:inputType="textEmailAddress" />

            <Button
                android:id="@+id/btReset"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:background="@drawable/rounded_shape"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/submit"
                android:layout_marginEnd="20dp"
                android:textColor="@color/white"
                android:layout_height="wrap_content">

            </Button>

        </LinearLayout>
    </LinearLayout>

</layout>
