<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".views.activities.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="match_parent"
            android:scaleType="centerCrop"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/homedeco" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/username_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="40dp"
                android:padding="5dp"
                android:paddingBottom="0dp"
                android:text="Username"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
               />

            <EditText
                android:id="@+id/usernameField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="30dp"
                android:focusable="true"
                android:imeOptions="actionNext"
                android:hint="@string/username_hint"
                android:padding="10dp"
                android:singleLine="true"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/password_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="30dp"
                android:padding="5dp"
                android:paddingBottom="0dp"
                android:text="Password"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                 />

            <EditText
                android:id="@+id/passwordField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="30dp"
                android:focusable="true"
                android:imeOptions="actionDone"
                android:inputType="numberPassword"
                android:padding="10dp"
                android:hint="@string/password"
                android:singleLine="true"
                android:textSize="18sp" />


            <Button
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="60dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/round"
                android:clickable="true"
                android:padding="10dp"
                android:text="Login"
                android:textSize="18sp" />

           <!-- <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:src="@drawable/ic_my_icon"
                android:contentDescription="@string/submit"
                android:layout_margin="16dp" />-->


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:padding="10dp"
                android:paddingBottom="0dp"
                android:text="@string/new_Account"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:paddingBottom="0dp"
                android:text="@string/forgot_password"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                />
        </LinearLayout>

    </RelativeLayout>

</layout>